--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,8 +19,12 @@
         <details class="dropdown dropdown-end">
           <summary class="btn btn-ghost m-1">
             <div class="avatar">
-              <div class="w-12 rounded-full">
-                <%= image_tag 'kkrn_icon_user_1.png' %>
+              <div class="w-12 rounded-full border-[2px] border-gray-200">
+                <% if current_user.avatar.attached? %>
+                  <%= image_tag current_user.avatar %>
+                <% else %>
+                  <%= image_tag 'kkrn_icon_user_1.png' %>
+                <% end %>
               </div>
             </div>
             <%= current_user.name %>
