--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container mx-auto w-[540px] px-10 py-5">
-  <h1 class="text-5xl font-bold text-center mb-10">プロフィール編集</h1>
+  <h1 class="text-5xl font-bold text-center mb-10"><%= t('users.edit.title') %></h1>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
@@ -14,7 +14,7 @@
     </div>
     <div class="field">
       <%= f.label :body %><br />
-      <%= f.text_area :body, autofocus: true, autocomplete: "body", class: "textarea textarea-bordered textarea-lg resize-none form-control h-[200px] w-full mx-auto pl-2 pt-1 text-base mb-6", placeholder: "500文字以内" %>
+      <%= f.text_area :body, autofocus: true, autocomplete: "body", class: "textarea textarea-bordered textarea-lg resize-none form-control h-[200px] w-full mx-auto pl-2 pt-1 text-base mb-6", placeholder: t('users.edit.body_length') %>
     </div>
     <div class="field">
       <%= f.label :avatar %><br />
@@ -27,15 +27,15 @@
     </div>
     <div class="field">
       <%= f.label :x_account %><br />
-      <%= f.text_field :x_account, autofocus: true, autocomplete: "name", class: "input input-bordered form-control mb-6 w-full mx-auto mt-2" %>
+      <%= f.text_field :x_account, autofocus: true, autocomplete: "name", class: "input input-bordered form-control mb-6 w-full mx-auto mt-2", placeholder: t('users.edit.x_account_url') %>
     </div>
     <div class="field">
       <%= f.label :instagram_account %><br />
-      <%= f.text_field :instagram_account, autofocus: true, autocomplete: "name", class: "input input-bordered form-control mb-6 w-full mx-auto mt-2" %>
+      <%= f.text_field :instagram_account, autofocus: true, autocomplete: "name", class: "input input-bordered form-control mb-6 w-full mx-auto mt-2", placeholder: t('users.edit.instagram_account_url') %>
     </div>
     <div class="field">
       <%= f.label :youtube_account %><br />
-      <%= f.text_field :youtube_account, autofocus: true, autocomplete: "name", class: "input input-bordered form-control mb-6 w-full mx-auto mt-2" %>
+      <%= f.text_field :youtube_account, autofocus: true, autocomplete: "name", class: "input input-bordered form-control mb-6 w-full mx-auto mt-2", placeholder: t('users.edit.youtube_account_url') %>
     </div>
 
     <!-- パスワードとメールアドレスの変更。別ページ作成
