fix: 全体の文字色を統一

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
       <header class="sticky top-0 z-40">
         <%= render 'layouts/header' %>
       </header>
-      <main class="flex-grow">
+      <main class="flex-grow text-[#333333] body-font">
         <%= render 'shared/flash_message' %>
         <%= yield %>
       </main>
