--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<section class="text-gray-600 body-font overflow-hidden">
+<section class="overflow-hidden">
   <div class="container px-5 py-10 mx-auto">
     <% if current_user == @user %>
       <div class="flex justify-end">
