--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,4 +1,4 @@
-<section class="text-gray-600 body-font overflow-hidden">
+<section class="overflow-hidden">
   <div class="container px-5 py-10 mx-auto">
     <div class="lg:w-4/5 mx-auto flex flex-wrap">
       <div class="flex flex-col lg:w-1/2">
