--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -11,23 +11,31 @@
       </div>
     <% end %>
     <div class="card-actions justify-end mt-1">
-    <!-- いいね・ブックマーク・Xシェア機能実装後に使う部分
+    <!-- いいね・ブックマーク機能実装後に使う部分
       <i class="fa-regular fa-heart"></i>
       <i class="fa-regular fa-bookmark"></i>
       <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-hashtags="インク沼" data-lang="ja" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     -->
-      <%= link_to "https://twitter.com/share?url=#{post_review_url(review)}&text=#{review.product.brand.name}%20#{review.product.name}をレビュー！%0a%0a#{review.title}&hashtags=インク沼", title: "Xでシェア" do %>
+      <%= link_to "https://twitter.com/share?url=#{post_review_url(review)}&text=#{review.product.brand.name}%20#{review.product.name}をレビュー！%0a%0a%23インク沼%20%23INKLOG%0a", title: "Xでシェア" do %>
         <i class="fa-brands fa-square-x-twitter text-[24px]"></i>
       <% end %>
     </div>
   </div>
   <div class="card-body gap-0 flex-shrink-0 w-[340px] p-4">
-    <h2 class="card-title overflow-hidden mb-1 text-lg font-bold text-ellipsis whitespace-nowrap"><%= review.title %></h2>
+    <div class="card-title overflow-hidden mb-1 justify-between">
+      <span class="w-3/4 text-[24px] font-bold text-ellipsis line-clamp-1"><%= review.title %></span>
+      <div class="w-8 rounded-full border-[2px] border-gray-200">
+        <% if review.user.avatar.attached? %>
+          <%= image_tag review.user.avatar %>
+        <% else %>
+          <%= image_tag 'kkrn_icon_user_1.png' %>
+        <% end %>
+      </div>
+    </div>
     <div class="text-sm"><%= review.product.name %></div>
     <div class="text-sm"><%= review.product.brand.name %></div>
     <div Class="overflow-hidden my-2 text-ellipsis line-clamp-3 whitespace-pre-wrap h-[72px]"><%= review.body %></div>
-    <div class="text-xs text-[#959595]"><%= review.paper %></div>
-    <div class="text-xs text-[#959595]"><%= review.pen %></div>
+    <div class="text-xs text-[#959595]"><%= review.paper %>　<%= review.pen %></div>
     <div class="card-actions justify-end">
       <%= link_to t('reviews.index.show_review'), review_path(review), class: "btn btn-sm btn-primary" %>
     </div>
