--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -33,10 +33,16 @@
       <div class="lg:w-1/2 w-full lg:pl-10 lg:py-6 mt-6 lg:mt-0">
         <h1 class="text-gray-900 text-3xl title-font font-medium mb-1"><%= @review.title %></h1>
         <div class="flex mb-4">
-          <div class="flex items-center">
-            <%= image_tag "kkrn_icon_user_1.png", class: "w-12 rounded-full" %>
-            <%= link_to @review.user.name, "#" %>
-          </div>
+          <%= link_to user_path(@review.user), class: "flex items-center gap-2" do %>
+            <div class="w-10 rounded-full border-[2px] border-gray-200">
+              <% if @review.user.avatar.attached? %>
+                <%= image_tag @review.user.avatar %>
+              <% else %>
+                <%= image_tag 'kkrn_icon_user_1.png' %>
+              <% end %>
+            </div>
+            <p><%= @review.user.name %></p>
+          <% end %>
           <div class="flex ml-auto items-center justify-center text-[#959595]"><%= l(@review.created_at) %></div>
         </div>
         <p class="leading-relaxed whitespace-pre-wrap"><%= @review.body %></p>
