--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,7 +23,7 @@
         <!-- フォローフォロワー機能実装誤に使用
         <div>0フォロー　0フォロワー</div>
         -->
-        <p><%= @user.body %></p>
+        <p class="whitespace-pre-wrap"><%= @user.body %></p>
         <div class="flex items-center gap-4 mt-6">
           <% if @user.x_account.present? %>
             <%= link_to @user.x_account do %>
@@ -43,7 +43,7 @@
         </div>
       </div>
     </div>
-    <div class="w-full mx-auto">
+    <div class="w-full mx-auto mt-5">
       <p class="text-[36px] mx-10 text-center"><%= t('users.show.current_user_reviews') %></p>
     </div>
     <div class="flex flex-wrap justify-center items-center p-5 gap-5">
