add: ユーザーアイコン削除用のリンクを設置 #29

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -20,8 +20,11 @@
       <%= f.label :avatar %><br />
       <%= f.file_field :avatar, class: "file-input file-input-bordered form-control mb-6 w-full mx-auto mt-2" %>
       <% if @user.avatar.attached? %>
-        <div class="flex items-center justify-center">
+        <div class="flex flex-col items-center justify-center">
           <%= image_tag @user.avatar, class: "w-12 rounded-full" %>
+          <%=link_to user_attachment_path(@user.id, @user.avatar.id), data: { turbo_method: :delete } do %>
+            <i class="fa-regular fa-circle-xmark"></i>
+          <% end %>
         </div>
       <% end %>
     </div>
