--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,9 +1,9 @@
 <div class="card card-side m-4 shadow" id="review-<%= review.id %>">
   <div class="px-4 py-4 relative">
     <% if review.images.attached? %>
-      <%= image_tag review.images[0].variant(resize_to_limit: [170, 170]).processed, class: "h-[170px] w-[170px] rounded-lg" %>
+      <%= image_tag review.images[0], class: "h-[170px] w-[170px] rounded-lg" %>
     <% else %>
-      <%= image_tag 'kkrn_icon_shashin_3.png', class: "h-[170px] w-[170px] rounded-lg" %>
+      <%= image_tag 'kkrn_icon_shashin_3.png', class: "h-[170px] w-[170px] rounded-lg object-cover" %>
     <% end %>
     <% if review.images.count > 1 %>
       <div class=" bg-black bg-opacity-50 absolute top-4 right-4 rounded-tr-lg rounded-bl-lg px-2">
