fix: ユーザーアイコンの表示がおかしかったのを修正

--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -24,13 +24,11 @@
   <div class="card-body gap-0 flex-shrink-0 w-[340px] p-4">
     <div class="card-title overflow-hidden mb-1 justify-between">
       <span class="w-3/4 text-[24px] font-bold text-ellipsis line-clamp-1"><%= review.title %></span>
-      <div class="w-8 rounded-full border-[2px] border-gray-200">
-        <% if review.user.avatar.attached? %>
-          <%= image_tag review.user.avatar %>
-        <% else %>
-          <%= image_tag 'kkrn_icon_user_1.png' %>
-        <% end %>
-      </div>
+      <% if review.user.avatar.attached? %>
+        <%= image_tag review.user.avatar, class: "w-8 rounded-full border-[2px] border-gray-200" %>
+      <% else %>
+        <%= image_tag 'kkrn_icon_user_1.png', class: "w-8 rounded-full border-[2px] border-gray-200" %>
+      <% end %>
     </div>
     <div class="text-sm"><%= review.product.name %></div>
     <div class="text-sm"><%= review.product.brand.name %></div>
