--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: product, class: "w-full max-w-lg") do |f| %>
+<%= form_with(model: product, html: { data: { turbo: turbo_frame_request? } }, class: "w-full max-w-lg") do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <div class="flex flex-wrap -mx-3 mb-4">
     <div class="w-full px-3">
