--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -12,14 +12,13 @@
     <% end %>
     <div class="card-actions justify-end mt-1">
       <div class="flex gap-2">
-      <!-- いいね・ブックマーク機能実装後に使う部分
-        <i class="fa-regular fa-heart"></i>
-        <i class="fa-regular fa-bookmark"></i>
-      -->
-        <%= render "reviews/like_btn", review: review %>
         <%= link_to "https://twitter.com/share?url=#{post_review_url(review)}&text=#{review.product.brand.name}%20#{review.product.name}をレビュー！%0a%0a%23インク沼%20%23INKLOG%0a", title: "Xでシェア" do %>
           <i class="fa-brands fa-square-x-twitter text-[24px]"></i>
         <% end %>
+        <!-- ブックマーク機能実装後に使う部分
+        <i class="fa-regular fa-bookmark"></i>
+        -->
+        <%= render "reviews/like_btn", review: review %>
       </div>
     </div>
   </div>
