--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -13,11 +13,9 @@
     <div class="card-actions justify-end mt-1">
       <div class="flex gap-2">
         <%= link_to "https://twitter.com/share?url=#{post_review_url(review)}&text=#{review.product.brand.name}%20#{review.product.name}をレビュー！%0a%0a%23インク沼%20%23INKLOG%0a", title: "Xでシェア" do %>
-          <i class="fa-brands fa-square-x-twitter text-[24px]"></i>
+          <i class="fa-brands fa-square-x-twitter text-[22px]"></i>
         <% end %>
-        <!-- ブックマーク機能実装後に使う部分
-        <i class="fa-regular fa-bookmark"></i>
-        -->
+        <%= render "reviews/bookmark_btn", review: review %>
         <%= render "reviews/like_btn", review: review %>
       </div>
     </div>
