--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -43,8 +43,9 @@
           <% end %>
           <div class="flex ml-auto items-center justify-center text-[#959595]"><%= l(@review.created_at) %></div>
         </div>
-        <div class="flex mb-4 mx-3">
+        <div class="flex mb-4 mx-3 gap-2">
           <%= render "reviews/like_btn", review: @review %>
+          <%= render "reviews/bookmark_btn", review: @review %>
         </div>
         <p class="leading-relaxed whitespace-pre-wrap"><%= @review.body %></p>
         <div class="mt-6 items-center pb-5 border-t-2 border-gray-100 mb-5">
