--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,10 +8,10 @@
       </div>
       <div class="flex flex-col justify-center items-center gap-4">
         <% if @product.brand.official_url.present? %>
-          <%= link_to t('product.show.official_url'), @product.brand.official_url, class: "btn btn-primary btn-wide text-[20px]" %>
+          <%= link_to t('product.show.official_url'), @product.brand.official_url, class: "btn btn-primary btn-wide text-[20px]", target: :_blank, rel: "noopener noreferrer nofollow" %>
         <% end %>
         <% if @product.brand.official_shopping_url.present? %>
-          <%= link_to t('product.show.official_shopping_url'), @product.brand.official_shopping_url, class: "btn btn-secondary btn-wide text-[20px]" %>
+          <%= link_to t('product.show.official_shopping_url'), @product.brand.official_shopping_url, class: "btn btn-secondary btn-wide text-[20px]", target: :_blank, rel: "noopener noreferrer nofollow" %>
         <% end %>
       </div>
     </div>
