--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,8 +16,8 @@
             <span><%= t('header.post') %></span>
           <% end %>
         </li>
-        <details class="dropdown dropdown-end">
-          <summary class="btn btn-ghost m-1">
+        <details class="dropdown dropdown-end ">
+          <summary class="inline-flex items-center justify-center gap-2 m-5">
             <div class="avatar">
               <div class="w-12 rounded-full border-[2px] border-gray-200">
                 <% if current_user.avatar.attached? %>
