--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
           <% end %>
         </li>
         <details class="dropdown dropdown-end ">
-          <summary class="inline-flex items-center justify-center gap-2 m-5">
+          <summary class="inline-flex items-center justify-center gap-2 m-5 cursor-pointer">
             <div class="avatar">
               <div class="w-12 rounded-full border-[2px] border-gray-200">
                 <% if current_user.avatar.attached? %>
