--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -20,3 +20,13 @@
     @apply border-transparent hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300
   }
 }
+
+dialog.slideover[open] {
+  animation: slide-in-from-left 250ms forwards ease;
+}
+
+@keyframes slide-in-from-left{
+  from {
+    transform: translateX(-100%);
+  }
+}
