--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,47 +1,49 @@
-<div class="navbar bg-base-100 border-b border-primary h-[70px]">
-  <div class="navbar-start">
-    <%= link_to '/', class: "text-lg" do %>
-      <%= image_tag 'header_logo.png', class: 'h-[50px] w-[200px] object-cover' %>
-    <% end %>
-  </div>
-  <div class="navbar-center">
-    <%= render 'shared/search_form', url: search_reviews_path %>
-  </div>
-  <div class="navbar-end">
-    <% if user_signed_in? %>
-      <ul class="menu menu-horizontal px-1 flex justify-center items-center gap-1 mx-4">
-        <li>
-          <%= link_to new_review_path, class: "btn btn-secondary" do %>
-            <i class="fa-solid fa-pen-to-square"></i>
-            <span><%= t('header.post') %></span>
-          <% end %>
-        </li>
-        <details class="dropdown dropdown-end ">
-          <summary class="inline-flex items-center justify-center gap-2 m-5 cursor-pointer">
-            <div class="avatar">
-              <div class="w-12 rounded-full border-[2px] border-gray-200">
-                <% if current_user.avatar.attached? %>
-                  <%= image_tag current_user.avatar %>
-                <% else %>
-                  <%= image_tag 'kkrn_icon_user_1.png' %>
-                <% end %>
+<div class="hidden sm:block">
+  <div class="navbar bg-base-100 border-b border-primary h-[70px]">
+    <div class="navbar-start">
+      <%= link_to '/', class: "text-lg" do %>
+        <%= image_tag 'header_logo.png', class: 'h-[50px] w-[200px] object-cover' %>
+      <% end %>
+    </div>
+    <div class="navbar-center">
+      <%= render 'shared/search_form', url: search_reviews_path %>
+    </div>
+    <div class="navbar-end">
+      <% if user_signed_in? %>
+        <ul class="menu menu-horizontal px-1 flex justify-center items-center gap-1 mx-4">
+          <li>
+            <%= link_to new_review_path, class: "btn btn-secondary" do %>
+              <i class="fa-solid fa-pen-to-square"></i>
+              <span><%= t('header.post') %></span>
+            <% end %>
+          </li>
+          <details class="dropdown dropdown-end ">
+            <summary class="inline-flex items-center justify-center gap-2 m-5 cursor-pointer">
+              <div class="avatar">
+                <div class="w-12 rounded-full border-[2px] border-gray-200">
+                  <% if current_user.avatar.attached? %>
+                    <%= image_tag current_user.avatar %>
+                  <% else %>
+                    <%= image_tag 'kkrn_icon_user_1.png' %>
+                  <% end %>
+                </div>
               </div>
-            </div>
-            <%= current_user.name %>
-          </summary>
-          <ul class="menu dropdown-content bg-base-100 rounded-box z-[1] w-52 p-2 shadow">
-            <li><%= link_to t('header.mypage'), user_path(current_user) %></li>
-            <li><%= link_to t('header.notification'), "#" %></li>
-            <li><%= link_to t('header.sign_out'), destroy_user_session_path, data: { turbo_method: :delete } %></li>
-          </ul>
-        </details>
-      </ul>
-    <% else %>
-      <ul class="menu menu-horizontal px-1 flex justify-center gap-1 mx-4">
-        <li><%= link_to t('header.sign_in'), user_session_path %></li>
-        <span class="w-[1px] bg-black mx-2"></span>
-        <li><%= link_to t('header.to_register_page'), new_user_registration_path %></li>
-      </ul>
-    <% end %>
+              <%= current_user.name %>
+            </summary>
+            <ul class="menu dropdown-content bg-base-100 rounded-box z-[1] w-52 p-2 shadow">
+              <li><%= link_to t('header.mypage'), user_path(current_user) %></li>
+              <li><%= link_to t('header.notification'), "#" %></li>
+              <li><%= link_to t('header.sign_out'), destroy_user_session_path, data: { turbo_method: :delete } %></li>
+            </ul>
+          </details>
+        </ul>
+      <% else %>
+        <ul class="menu menu-horizontal px-1 flex justify-center gap-1 mx-4">
+          <li><%= link_to t('header.sign_in'), user_session_path %></li>
+          <span class="w-[1px] bg-black mx-2"></span>
+          <li><%= link_to t('header.to_register_page'), new_user_registration_path %></li>
+        </ul>
+      <% end %>
+    </div>
   </div>
 </div>
