--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
   <body class="body-font">
     <div class="flex flex-col h-screen">
       <header class="sticky top-0 z-40">
+        <%= render 'layouts/mobile_header' %>
         <%= render 'layouts/header' %>
       </header>
       <main class="flex-grow text-[#333333]">
