--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,5 @@
-<div class="container mx-auto w-[540px] px-10 py-5">
-  <h1 class="text-5xl font-bold text-center mb-10"><%= t('users.edit.title') %></h1>
+<div class="container mx-auto w-full sm:w-[540px] px-10 py-5">
+  <h1 class="text-[24px] sm:text-5xl font-bold text-center mb-10"><%= t('users.edit.title') %></h1>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
