--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 
-<div class="container mx-auto w-[540px] px-10 py-5">
-  <h1 class="text-5xl font-bold text-center mb-10"><%= t('devise.registrations.new.title') %></h1>
+<div class="container mx-auto w-full sm:w-[540px] px-10 py-5">
+  <h1 class="text-[24px] sm:text-5xl font-bold text-center mb-10"><%= t('devise.registrations.new.title') %></h1>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
