--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,5 @@
 <%= render "shared/remote_modal", title: t('product.new.title') do %>
-  <div class="container mx-auto w-[540px] px-10 py-5">
+  <div class="container mx-auto w-full sm:w-[540px] px-10 py-5">
     <%= render 'form', product: @product %>
   </div>
 <% end %>
