--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -15,7 +15,7 @@
           <div class="flex mx-2 mt-2 gap-[24px] items-center justify-center">
             <% @review.images.each do |image| %>
               <div class ="flex flex-col items-center justify-center">
-                <%= image_tag image, class: "lg:w-[80px] w-full lg:h-[80px] h-64 object-fill object-center" %>
+                <%= image_tag image, class: "w-[60px] sm:w-[80px] h-[60px] sm:h-[80px] object-fill object-center" %>
                 <%=link_to review_attachment_path(@review.id, image.id), data: { turbo_method: :delete } do %>
                   <i class="fa-regular fa-circle-xmark"></i>
                 <% end %>
