--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,5 +1,5 @@
-<div class="container mx-auto w-[540px] px-10 py-5">
-  <h1 class="text-5xl font-bold text-center mb-10"><%= t('reviews.edit.title') %></h1>
+<div class="container mx-auto w-full sm:w-[540px] px-10 py-5">
+  <h1 class="text-[24px] sm:text-5xl font-bold text-center mb-10"><%= t('reviews.edit.title') %></h1>
   <%= render 'form', review: @review, images: @review.reload.images %>
   <div class="text-center mt-10">
     <%= link_to t('helpers.links.back'), 'javascript:history.back()', class: "btn btn-outline btn-primary" %>
