update: インク選択モーダルのレスポンシブ対応 #125

--- a/app/views/shared/_remote_modal.html.erb
+++ b/app/views/shared/_remote_modal.html.erb
@@ -10,5 +10,8 @@
         <%= render 'shared/flash_message' %>
         <%= yield %>
     </div>
+    <form method="dialog" class="modal-backdrop">
+      <button>close</button>
+    </form>
   </div>
 <% end %>
