--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,5 @@
 <%= render "shared/remote_modal", title: t('product.index.title') do %>
-  <div class="container mx-auto w-full px-10 py-5">
+  <div class="container mx-auto w-full sm:px-10 py-5">
     <div class=" flex justify-center items-center">
       <%= render 'search_form', url: products_path %>
     </div>
